RESOLVED FIXED165398
[CSS Parser] Fix calc() with -webkit-line-clamp
https://bugs.webkit.org/show_bug.cgi?id=165398
Summary [CSS Parser] Fix calc() with -webkit-line-clamp
Dave Hyatt
Reported 2016-12-05 12:09:13 PST
[CSS Parser] Fix calc() with -webkit-line-clamp
Attachments
Patch (1.34 KB, patch)
2016-12-05 12:10 PST, Dave Hyatt
zalan: review+
Dave Hyatt
Comment 1 2016-12-05 12:10:04 PST
Dave Hyatt
Comment 2 2016-12-05 12:11:37 PST
Fixed in r209338.
Note You need to log in before you can comment on or make changes to this bug.