[CSS Parser] Fix calc() with -webkit-line-clamp https://bugs.webkit.org/show_bug.cgi?id=165398

Reviewed by Zalan Bujtas.

Remove the aggressive token type checking up front, since it was causing calc() to not
be allowed.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeLineClamp):



Canonical link: https://commits.webkit.org/183010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209338 268f45cc-cd09-0410-ab3c-d52691b4dbfc